--- a/custom_CovNet_fer.ipynb
+++ b/custom_CovNet_fer.ipynb
@@ -59,7 +59,7 @@
         "kagglehub.login()\n"
       ],
       "metadata": {
-        "id": "eVLHRDBOka6E"
+        "id": "bWmpbRWKmQK1"
       },
       "cell_type": "code",
       "outputs": [],
@@ -78,7 +78,7 @@
         "print('Data source import complete.')\n"
       ],
       "metadata": {
-        "id": "ChV26BAmka6F"
+        "id": "QbUDOp_kmQK2"
       },
       "cell_type": "code",
       "outputs": [],
@@ -116,8 +116,8 @@
           "shell.execute_reply.started": "2025-04-02T06:34:23.767028Z",
           "shell.execute_reply": "2025-04-02T06:34:25.083478Z"
         },
-        "id": "6TgtpltOka6G",
-        "outputId": "ca7bd382-f95b-454d-8aea-b44f7f62b70c"
+        "id": "Z8i-LYJLmQK3",
+        "outputId": "b337ad2f-1816-4254-f823-4fea7c7bf479"
       },
       "outputs": [
         {
@@ -147,7 +147,7 @@
           "shell.execute_reply.started": "2025-04-02T06:34:25.086395Z",
           "shell.execute_reply": "2025-04-02T06:34:42.291103Z"
         },
-        "id": "zpu-jgl8ka6H"
+        "id": "vSGDqkkfmQK4"
       },
       "outputs": [],
       "execution_count": null
@@ -260,8 +260,8 @@
           "shell.execute_reply.started": "2025-04-02T07:33:44.264199Z",
           "shell.execute_reply": "2025-04-02T08:03:47.660103Z"
         },
-        "id": "IoaRi863ka6H",
-        "outputId": "e3149304-59c9-471e-b551-7fd68f94fd72"
+        "id": "iiLs-0xpmQK4",
+        "outputId": "39644024-ea27-415a-d228-e4c6de0a20b0"
       },
       "outputs": [
         {
@@ -351,7 +351,7 @@
           "shell.execute_reply.started": "2025-04-02T08:04:13.130257Z",
           "shell.execute_reply": "2025-04-02T08:04:13.322804Z"
         },
-        "id": "3ZajES9kka6I"
+        "id": "rtqALEExmQK4"
       },
       "outputs": [],
       "execution_count": null
@@ -412,8 +412,8 @@
           "shell.execute_reply.started": "2025-04-02T07:16:04.873538Z",
           "shell.execute_reply": "2025-04-02T07:17:51.888215Z"
         },
-        "id": "rx3n5nwTka6I",
-        "outputId": "a4be7fa1-0752-41e1-c60c-6a4d6c6f7e23"
+        "id": "GD3B7zJUmQK4",
+        "outputId": "243938cc-d10a-4c76-92c0-56c719a23c55"
       },
       "outputs": [
         {
@@ -474,8 +474,8 @@
           "shell.execute_reply.started": "2025-04-02T08:07:22.193381Z",
           "shell.execute_reply": "2025-04-02T08:07:23.087409Z"
         },
-        "id": "1tZYk06Tka6I",
-        "outputId": "a3ac88a0-70c4-4c62-ff0b-79e7c76a379b"
+        "id": "3o8bU_2pmQK5",
+        "outputId": "c52860ee-fc34-4f39-c135-0de6495123b7"
       },
       "outputs": [
         {
@@ -518,8 +518,8 @@
           "shell.execute_reply.started": "2025-04-02T08:04:44.424554Z",
           "shell.execute_reply": "2025-04-02T08:04:47.561524Z"
         },
-        "id": "O3Wdwp5mka6J",
-        "outputId": "d3ba75c0-3b2e-4d03-d1c9-3567a4a338cf"
+        "id": "qpj51EwJmQK5",
+        "outputId": "b120b67d-e160-4c34-f9cd-072e4914fc87"
       },
       "outputs": [
         {
@@ -569,8 +569,8 @@
           "shell.execute_reply.started": "2025-04-02T07:18:53.754191Z",
           "shell.execute_reply": "2025-04-02T07:18:56.006371Z"
         },
-        "id": "TLthC7Erka6J",
-        "outputId": "f63932da-28ef-402e-f01c-ba483a91de88"
+        "id": "5A8jX08RmQK5",
+        "outputId": "5a2c4efe-a34a-41e9-8f3f-67989cdba6af"
       },
       "outputs": [
         {
@@ -599,35 +599,17 @@
     {
       "cell_type": "code",
       "source": [
-        "# Load FER-2013 test dataset\n",
-        "fer_csv_path = '/kaggle/input/fer-2013-ck-dataset/fer2013.csv'\n",
-        "X_train_fer, X_test_fer, y_train_fer, y_test_fer = load_fer2013(fer_csv_path)\n",
-        "\n",
-        "# Convert to NumPy arrays\n",
-        "X_test_fer = np.array(X_test_fer).reshape(-1, 48, 48, 1)\n",
-        "y_test_fer = np.array(y_test_fer)\n",
-        "\n",
-        "# Step 2: Evaluate the fine-tuned model on FER-2013 test data\n",
-        "test_loss, test_accuracy = convnet.evaluate(X_test_fer, y_test_fer, batch_size=32)\n",
-        "print(f\"Test Accuracy on FER-2013: {test_accuracy * 100:.2f}%\")\n",
-        "\n",
-        "# Step 3: Make predictions on the FER-2013 test set\n",
-        "y_pred_fer = convnet.predict(X_test_fer)  # Predictions on the FER-2013 test set\n",
-        "y_pred_classes_fer = np.argmax(y_pred_fer, axis=1)  # Get the class with the highest probability\n",
-        "\n",
-        "# Step 4: Compute the F1 score for FER-2013\n",
-        "f1_fer = f1_score(y_test_fer, y_pred_classes_fer, average='weighted')\n",
-        "print(\"F1 Score on FER-2013: \", f1_fer)\n",
-        "\n",
-        "# Step 5: Generate the confusion matrix for FER-2013\n",
-        "cm_fer = confusion_matrix(y_test_fer, y_pred_classes_fer)\n",
+        "# Define class labels for FER-2013 dataset\n",
+        "class_labels = ['Angry', 'Disgust', 'Fear', 'Happy', 'Sad', 'Surprise', 'Neutral']\n",
         "\n",
         "# Plotting the confusion matrix for FER-2013\n",
         "plt.figure(figsize=(8, 6))\n",
-        "sns.heatmap(cm_fer, annot=True, fmt='d', cmap='Blues', xticklabels=np.arange(7), yticklabels=np.arange(7))\n",
+        "sns.heatmap(cm_fer, annot=True, fmt='d', cmap='Blues', xticklabels=class_labels, yticklabels=class_labels)\n",
         "plt.title('Confusion Matrix for FER-2013')\n",
-        "plt.xlabel('Predicted')\n",
-        "plt.ylabel('Actual')\n",
+        "plt.xlabel('Predicted Label')\n",
+        "plt.ylabel('True Label')\n",
+        "plt.xticks(rotation=45)  # Rotate labels for better readability\n",
+        "plt.yticks(rotation=0)\n",
         "plt.show()"
       ],
       "metadata": {
@@ -639,8 +621,8 @@
           "shell.execute_reply.started": "2025-04-02T07:24:54.795755Z",
           "shell.execute_reply": "2025-04-02T07:25:05.225215Z"
         },
-        "id": "IHSBNMhCka6K",
-        "outputId": "c4d6d839-be0b-446c-ed1d-e64d91992ed4"
+        "id": "8KtOY7smmQK5",
+        "outputId": "fa808c5d-b88a-42a4-cd5b-f79f5c6e2465"
       },
       "outputs": [
         {
